--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
     ,
     "require-dev": {
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-latest"
     },
     "extra": {
         "bootstrap": "thefx\\user\\Bootstrap"
